--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,354 +1,346 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-body{
-    background-image: url("../imgs/69.jpg");
-    background-size: 1550px 1100px;
-    background-position: center;
-    background-attachment: fixed;
-    backdrop-filter: blur(0px);
+body {
+  background-image: url("../imgs/69.jpg");
+  background-size: 1550px 1100px;
+  background-position: center;
+  background-attachment: fixed;
+  backdrop-filter: blur(0px);
 }
 
 .bordering {
-    border-right: 2px solid rgb(18, 89, 136);
-    height: 30%;
-    display: inline-block;
-    margin: 4.2vh 0;
-  }
+  border-right: 2px solid rgb(18, 89, 136);
+  height: 30%;
+  display: inline-block;
+  margin: 4.2vh 0;
+}
 
-  header {
-    background-color: rgba(0, 169, 152, 0.219);
-    border-bottom: 2px solid rgb(18, 89, 136);
-    height: 15vh;
-    width: 100%;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    transition: 100ms linear;
-  }
+header {
+  background-color: rgba(0, 169, 152, 0.219);
+  border-bottom: 2px solid rgb(18, 89, 136);
+  height: 15vh;
+  width: 100%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  transition: 100ms linear;
+}
 
-  header nav {
-    width: 50%;
-    height: 80%;
-    float: right;
-    margin: 1.5vh 0;
-    display: flex;
-    justify-content: space-around;
-  }
+header nav {
+  width: 50%;
+  height: 80%;
+  float: right;
+  margin: 1.5vh 0;
+  display: flex;
+  justify-content: space-around;
+}
 
-  .logo {
-    display: inline-block;
-    cursor: pointer;
-    margin-right: auto;
-    width: 10%;
-    padding: 3vh;
-  }
-  /*TODO - make navigation bar sticky*/
-  nav a {
-    text-decoration: none;
-    font-weight: 800;
-    font-size: 18px;
-    font-family: 'Kanit', sans-serif;
-    text-align: center;
-    transition: all 0.3s ease 0s;
-    color: rgba(0, 136, 169, 1);
-    padding: 2.2vh;
-    margin: 2vh .5vh;
-    border-radius: 25px;
-  }
-  nav div{
-    display: flex;
-    margin-left: 20%;
+.logo {
+  display: inline-block;
+  cursor: pointer;
+  margin-right: auto;
+  width: 10%;
+  padding: 3vh;
+}
+/*TODO - make navigation bar sticky*/
+nav a {
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 18px;
+  font-family: "Kanit", sans-serif;
+  text-align: center;
+  transition: all 0.3s ease 0s;
+  color: rgba(0, 136, 169, 1);
+  padding: 2.2vh;
+  margin: 2vh 0.5vh;
+  border-radius: 25px;
+}
+nav div {
+  display: flex;
+  margin-left: 20%;
+}
+nav a:hover {
+  color: black;
+}
 
-  }
-  nav a:hover {
-    color: black;
-  }
+#active {
+  color: white;
+  background-color: rgba(0, 136, 169, 1);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
 
-  #active {
-    color: white;
-    background-color: rgba(0, 136, 169, 1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-  }
+#toggleButton {
+  display: none;
+}
 
+header button {
+  font-size: 1.5em;
+  width: 10vh;
+  background-color: rgba(0, 136, 169, 1);
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  height: 6vh;
+  position: absolute;
+  top: 4vh;
+  right: 3vh;
+}
+
+header button:hover {
+  background-color: rgba(0, 136, 169, 0.8);
+  color: black;
+}
+
+@media only screen and (max-width: 851px) {
   #toggleButton {
+    display: block;
+  }
+  nav div {
+    display: inline-block;
+    margin: 0;
+    background-color: rgba(0, 136, 169, 0.8);
+    top: 15vh;
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    z-index: 0;
+  }
+  #active {
+    border-radius: 0;
+  }
+  nav div a {
+    display: block;
+    width: 100%;
+    border-radius: 0;
+    margin: 0;
+  }
+  .show {
+    opacity: 1;
+    visibility: visible;
+  }
+  .hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .bordering {
     display: none;
   }
 
-  header button {
-    font-size: 1.5em;
-    width: 10vh;
-    background-color: rgba(0, 136, 169, 1);
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-    height: 6vh;
+  .logo {
     position: absolute;
-    top: 4vh;
-    right: 3vh;
+    top: 8px;
+    left: -5px;
+    width: 20vh;
   }
+}
 
-  header button:hover {
-    background-color: rgba(0, 136, 169, 0.8);
-    color: black;
-  }
+footer {
+  background-color: rgba(0, 169, 152, 0.319);
+  width: 100%;
+  height: 40vh;
+  margin-top: 10%;
+  border-top: 4px solid black;
+}
+.footer1 {
+  width: 33.33%;
+  height: 83%;
 
-  @media only screen and (max-width: 851px) {
-    #toggleButton {
-      display: block;
-    }
-    nav div{
-        display: inline-block;
-        margin: 0;
-        background-color: rgba(0, 136, 169, 0.8);
-        top: 15vh;
-        position: absolute;
-        width: 100%;
-        left: 0px;
-        z-index: 0;
-    }
-    #active{
-        border-radius: 0;
-    }
-    nav div a{
-        display: block;
-        width: 100%;
-        border-radius: 0;
-        margin: 0;
-    }
-    .show{
-        opacity: 1;
-        visibility: visible;
-    }
-    .hidden{
-        opacity: 0;
-        visibility: hidden;
-    }
+  font-family: "Dancing Script", cursive;
+  font-size: 30px;
+  color: black;
+  float: left;
+  text-align: center;
+  padding: 3% 3.5% 0;
+  text-shadow: 1px 1px 15px bisque;
+}
+.footer1 h3 {
+  border-top: 4px solid aqua;
+  padding-top: 3%;
+}
+.footer1 h1,
+.footer1 h3 {
+  border-right: 4px solid aqua;
+}
+.footer2 {
+  width: 33.33%;
+  height: 83%;
+  float: left;
+  padding-top: 35px;
+  text-shadow: 1px 1px 15px bisque;
+}
+.footer2 li {
+  list-style-type: none;
+  padding: 2px 0 0 25%;
+  border-right: 3px solid cyan;
+}
+.footer2 li a {
+  font-weight: 800;
+  font-size: 18px;
+  color: black;
+  text-decoration: none;
+  padding: 2% 0 2% 0;
+}
+.footer3 {
+  width: 33.33%;
+  height: 83%;
+  float: right;
+  text-align: left;
+  padding-left: 10px;
+}
+.footer3 font input {
+  padding: 2% 150px 2% 10px;
+  margin: 20px 0 0 3%;
+  border: solid 3px black;
+}
+.footer3 font button {
+  background-color: black;
+  color: aqua;
+  padding: 3px 50px;
+  border: solid 1px whitesmoke;
+  margin: 15px 0 0 3%;
+  cursor: pointer;
+}
+.footer3 font button:hover {
+  background-color: aqua;
+  color: black;
+  padding: 3px 55px;
+  font-size: 23px;
+  border: solid 4px black;
+}
+.icons {
+  list-style-type: none;
+  display: flex;
+  font-size: 40px;
+  font-family: "Kanit", sans-serif;
+  margin: 3% 4%;
+  text-shadow: 1px 1px 10px black;
+}
+.icons a {
+  text-decoration: none;
+  color: aqua;
+}
+.icons li {
+  padding: 2% 18px 0;
+  cursor: pointer;
+}
+.footer4 {
+  float: left;
+  height: 10%;
+  width: inherit;
+  padding: 2px 20% 0;
+  text-align: center;
+}
+.footer4 h4 {
+  padding-top: 10px;
+  border-top: 4px solid black;
+}
 
-    .bordering {
-      display: none;
-    }
-
-    .logo {
-      position: absolute;
-      top: 8px;
-      left: -5px;
-      width: 20vh;
-    }
-  }
-
-footer{
-    background-color: rgba(0, 169, 152, 0.319);
+@media only screen and (max-width: 851px) {
+  footer {
+    display: inline-block;
     width: 100%;
-    height: 40vh;
-    margin-top: 10%;
-    border-top: 4px solid black;
-}
-.footer1{
-    width: 33.33%;
-    height: 83%;
-
-    font-family: 'Dancing Script', cursive;
-    font-size: 30px;
-    color: black;
+    height: 50vh;
+  }
+  .footer1 {
+    width: 50%;
+    height: 50%;
     float: left;
-    text-align: center;
-    padding: 3% 3.5% 0;
-    text-shadow: 1px 1px 15px bisque;
-}
-.footer1 h3{
-    border-top: 4px solid aqua;
+    font-size: 17px;
+    padding: 12% 3% 0 2%;
+  }
+  .footer1 h3 {
+    border-top: 2px solid aqua;
     padding-top: 3%;
-}
-.footer1 h1, .footer1 h3{
-    border-right: 4px solid aqua;
-}
-.footer2{
-    width: 33.33%;
-    height: 83%;
-    float: left;
-    padding-top: 35px;
-    text-shadow: 1px 1px 15px bisque;
-
-}
-.footer2 li{
-    list-style-type: none;
-    padding: 2px 0 0 25%;
-    border-right: 3px solid cyan;
-}
-.footer2 li a{
-    font-weight: 800;
-    font-size: 18px;
+    border-right: 3px solid aqua;
+  }
+  .footer1 h1 {
+    border-right: 3px solid aqua;
+  }
+  .footer2 {
+    width: 50%;
+    height: 50%;
+    float: right;
+    padding-top: 10px;
+    padding-bottom: 7px;
+    padding-right: 2px;
+  }
+  .footer2 li {
+    padding: 5px 0 0 3%;
+    font-weight: 600;
+    border-left: 2px solid aqua;
+    border-right: none;
+  }
+  .footer2 li a {
+    font-size: 15px;
     color: black;
     text-decoration: none;
-    padding: 2% 0 2% 0;
-
-}
-.footer3{
-    width: 33.33%;
-    height: 83%;
-    float: right;
-    text-align: left;
-    padding-left: 10px;
-}
-.footer3 font input{
+  }
+  .footer3 {
+    width: 100%;
+    height: 40%;
+    display: inline-block;
+    float: none;
+    padding: 2% 5%;
+  }
+  .footer3 font {
+    border-top: 4px solid black;
+  }
+  .footer3 font input {
     padding: 2% 150px 2% 10px;
-    margin: 20px 0 0 3%;
+    margin: 1px 0 0 0;
     border: solid 3px black;
-}
-.footer3 font button{
+  }
+  .footer3 font button {
     background-color: black;
     color: aqua;
     padding: 3px 50px;
     border: solid 1px whitesmoke;
-    margin: 15px 0 0 3%;
+    margin: 10px 0 0 0;
     cursor: pointer;
-}
-.footer3 font button:hover{
+  }
+  .footer3 font button:hover {
     background-color: aqua;
     color: black;
-    padding: 3px 55px;
-    font-size: 23px;
+    padding: 3px 51px;
+    font-size: 20px;
     border: solid 4px black;
-}
-.icons{
-    list-style-type: none;
-    display: flex;
-    font-size: 40px;
-    font-family: 'Kanit', sans-serif;
-    margin: 3% 4%;
-    text-shadow: 1px 1px 10px black;
-}
-.icons a{
-    text-decoration: none;
-    color: aqua;
-}
-.icons li{
-    padding: 2% 18px 0;
-    cursor: pointer;
-
-}
-.footer4{
+  }
+  .icons {
+    font-size: 30px;
+    margin: 1% 0 0 0;
+    padding-left: 5px;
+  }
+  .icons li {
+    padding: 1% 20px 0;
+  }
+  .footer4 {
     float: left;
     height: 10%;
     width: inherit;
     padding: 2px 20% 0;
     text-align: center;
-}
-.footer4 h4{
+  }
+  .footer4 h4 {
     padding-top: 10px;
     border-top: 4px solid black;
-}
-
-
-
-
-
-@media only screen and (max-width: 851px){
-    footer{
-        display: inline-block;
-        width: 100%;
-        height: 50vh;
-    }
-    .footer1{
-        width: 50%;
-        height: 50%;
-        float: left;
-        font-size: 17px;
-        padding: 12% 3% 0 2%;
-    }
-    .footer1 h3{
-        border-top: 2px solid aqua;
-        padding-top: 3%;
-        border-right: 3px solid aqua;
-    }
-    .footer1 h1{
-        border-right: 3px solid aqua;
-    }
-    .footer2{
-        width: 50%;
-        height: 50%;
-        float: right;
-        padding-top: 10px;
-        padding-bottom: 7px;
-        padding-right: 2px;
-    }
-    .footer2 li{
-        padding: 5px 0 0 3%;
-        font-weight: 600;
-        border-left: 2px solid aqua;
-        border-right: none;
-    }
-    .footer2 li a{
-        font-size: 15px;
-        color: black;
-        text-decoration: none;
-    }
-    .footer3{
-        width: 100%;
-        height: 40%;
-        display: inline-block;
-        float: none;
-        padding: 2% 5%;
-    }
-    .footer3 font{
-        border-top: 4px solid black;
-    }
-    .footer3 font input{
-        padding: 2% 150px 2% 10px;
-        margin: 1px 0 0 0;
-        border: solid 3px black;
-    }
-    .footer3 font button{
-        background-color: black;
-        color: aqua;
-        padding: 3px 50px;
-        border: solid 1px whitesmoke;
-        margin: 10px 0 0 0;
-        cursor: pointer;
-    }
-    .footer3 font button:hover{
-        background-color: aqua;
-        color: black;
-        padding: 3px 51px;
-        font-size: 20px;
-        border: solid 4px black;
-    }
-    .icons{
-        font-size: 30px;
-        margin: 1% 0 0 0;
-        padding-left: 5px;
-    }
-    .icons li{
-        padding: 1% 20px 0;
-    }
-    .footer4{
-        float: left;
-        height: 10%;
-        width: inherit;
-        padding: 2px 20% 0;
-        text-align: center;
-    }
-    .footer4 h4{
-        padding-top: 10px;
-        border-top: 4px solid black;
-    }
-    #smallertext{
-        font-size: 13px;
-    }
-    /*TODO - fix the footer in mobile resposive, Also do header*/
-    /*Ok! I will fix it tomorrow*/
-
+  }
+  #smallertext {
+    font-size: 13px;
+  }
+  /*TODO - fix the footer in mobile resposive, Also do header*/
+  /*Ok! I will fix it tomorrow*/
 }
