--- a/public/css/items.css
+++ b/public/css/items.css
@@ -1,43 +1,43 @@
-section{
-    width: 84%;
-    height: 70vh;
-    background-color: rgb(201, 238, 246);
-    margin: 7vh 8%;
-    display: flex;
-    border: solid 4px black;
+section {
+  width: 84%;
+  height: 70vh;
+  background-color: rgb(201, 238, 246);
+  margin: 7vh 8%;
+  display: flex;
+  border: solid 4px black;
 }
 
-#left{
-    flex: 35%;
-    margin-left: 5vh;
+#left {
+  flex: 35%;
+  margin-left: 5vh;
 }
-#left img{
-    width: 80%;
-    margin: 10%;
-    box-shadow: 25px 25px rgba(0, 0, 0, .6);
-    margin-top: 15%;
+#left img {
+  width: 80%;
+  margin: 10%;
+  box-shadow: 25px 25px rgba(0, 0, 0, 0.6);
+  margin-top: 15%;
 }
-#left p{
-    text-align: center;
-    font-size: 4em;
-    font-family: 'Courier New', Courier, monospace;
-    color: white;
-    text-shadow: 3px 3px #000000;
-    font-weight: 800;
+#left p {
+  text-align: center;
+  font-size: 4em;
+  font-family: "Courier New", Courier, monospace;
+  color: white;
+  text-shadow: 3px 3px #000000;
+  font-weight: 800;
 }
 
-#right{
-    text-align: justify;
-    flex: 65%;
+#right {
+  text-align: justify;
+  flex: 65%;
 }
-#right p{
-    font-size: 2.5em;
-    padding: 10% 10vh;
-    padding-bottom: 0;
+#right p {
+  font-size: 2.5em;
+  padding: 10% 10vh;
+  padding-bottom: 0;
 }
 
 @media (max-width: 800px) {
-    section {
-      flex-direction: column;
-    }
+  section {
+    flex-direction: column;
   }
+}
