--- a/views/contactus.html
+++ b/views/contactus.html
@@ -1,67 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/header.css" type="text/css">
-    <script src="https://kit.fontawesome.com/ef09da54b9.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/header.css" type="text/css" />
+    <script
+      src="https://kit.fontawesome.com/ef09da54b9.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Contact Us</title>
-</head>
-<body class="mainn">
-        <header>
-            <img class="logo" src="imgs/sdwlogo.png" alt="logo">
-            <nav>
-              <button id="toggleButton"><i class="fa fa-bars"></i></button>
-              <div class="hidden">
-                <a href="/">Homepage</a><span class="bordering"></span>
-                <a href="/store">Stores</a><span class="bordering"></span>
-                <a href="/delivery">Services</a><span class="bordering"></span>
-                <a href="/contactus"  id="active" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
-              </div>
-            </nav>
-          
-        </header>
-        <script src="js/navigation.js"></script>
+  </head>
+  <body class="mainn">
+    <header>
+      <img class="logo" src="imgs/sdwlogo.png" alt="logo" />
+      <nav>
+        <button id="toggleButton"><i class="fa fa-bars"></i></button>
+        <div class="hidden">
+          <a href="/">Homepage</a><span class="bordering"></span>
+          <a href="/store">Stores</a><span class="bordering"></span>
+          <a href="/delivery">Services</a><span class="bordering"></span>
+          <a
+            href="/contactus"
+            id="active"
+            style="width: auto; padding: 2.2vh 1.5vh"
+            >About & Contact</a
+          >
+        </div>
+      </nav>
+    </header>
+    <script src="js/navigation.js"></script>
     <a href="/contact">Go to contact</a>
     <div class="footerclass">
-        <footer>
-            <div class="footer1">
-                <h1>ShweDuWun</h1>
-                <br>
-                <h3>Medical Product Distributor</h3>
-            </div>
+      <footer>
+        <div class="footer1">
+          <h1>ShweDuWun</h1>
+          <br />
+          <h3>Medical Product Distributor</h3>
+        </div>
 
-            <div class="footer2">
-                <ul>
-                    <li><a href="#">Pages</a></li>
-                    <br>
-                    <li><a href="#">stores</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">contact</a></li>
-                    <br>
-                    <li><a href="#">Contact2WebsiteDevelopers</a></li>
-                </ul>
-            </div>
-            <div class="footer3">
-                <font>
-                    <input type="email" required placeholder="Type your Email...">
-                    <br>
-                    <button type="submit">Subscribe</button>
-                </font>
+        <div class="footer2">
+          <ul>
+            <li><a href="#">Pages</a></li>
+            <br />
+            <li><a href="#">stores</a></li>
+            <li><a href="#">services</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">contact</a></li>
+            <br />
+            <li><a href="#">Contact2WebsiteDevelopers</a></li>
+          </ul>
+        </div>
+        <div class="footer3">
+          <font>
+            <input type="email" required placeholder="Type your Email..." />
+            <br />
+            <button type="submit">Subscribe</button>
+          </font>
 
-                <ul class="icons">
-                    <li><a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-facebook-messenger fa-fade"></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a></li>
-                </ul>
-            </div>
-            <div class="footer4">
-               <h4>Copyright@ 2023-2024</h4>
-            </div>
-        </footer>
+          <ul class="icons">
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fa-brands fa-facebook-messenger fa-fade"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer4">
+          <h4>Copyright@ 2023-2024</h4>
+        </div>
+      </footer>
     </div>
-    
-</body>
+  </body>
 </html>
