--- a/views/items.ejs
+++ b/views/items.ejs
@@ -1,72 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/header.css" type="text/css">
-    <link rel="stylesheet" href="/css/items.css" type="text/css">
-    <script src="https://kit.fontawesome.com/ef09da54b9.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/header.css" type="text/css" />
+    <link rel="stylesheet" href="/css/items.css" type="text/css" />
+    <script
+      src="https://kit.fontawesome.com/ef09da54b9.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Website4MyMomsBusiness</title>
-</head>
-<body class="mainn">
-        <header>
-            <img class="logo" src="/imgs/sdwlogo.png" alt="logo">
-            <nav>
-              <button id="toggleButton"><i class="fa fa-bars"></i></button>
-              <div class="hidden">
-                <a href="/" >Homepage</a><span class="bordering"></span>
-                <a href="/store" id="active">Stores</a><span class="bordering"></span>
-                <a href="/delivery">Services</a><span class="bordering"></span>
-                <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
-              </div>
-            </nav>
-        </header>
-        <script src="/js/navigation.js"></script>
+  </head>
+  <body class="mainn">
+    <header>
+      <img class="logo" src="/imgs/sdwlogo.png" alt="logo" />
+      <nav>
+        <button id="toggleButton"><i class="fa fa-bars"></i></button>
+        <div class="hidden">
+          <a href="/">Homepage</a><span class="bordering"></span>
+          <a href="/store" id="active">Stores</a
+          ><span class="bordering"></span> <a href="/delivery">Services</a
+          ><span class="bordering"></span>
+          <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh"
+            >About & Contact</a
+          >
+        </div>
+      </nav>
+    </header>
+    <script src="/js/navigation.js"></script>
     <section>
-        <div id="left">
-            <img src="/imgs/item_photos/<%= image %>" alt="" id="image">
-            <p id="price"><%= price %></p>
-        </div>
-        <div id="right">
-            <p id="details"><%= details %></p>
-        </div>
+      <div id="left">
+        <img src="/imgs/item_photos/<%= image %>" alt="" id="image" />
+        <p id="price"><%= price %></p>
+      </div>
+      <div id="right">
+        <p id="details"><%= details %></p>
+      </div>
     </section>
     <div class="footerclass">
-        <footer>
-            <div class="footer1">
-                <h1>ShweDuWun</h1>
-                <br>
-                <h3>Medical Product Distributor</h3>
-            </div>
-            <div class="footer2">
-                <ul>
-                    <li><a href="#">Pages</a></li>
-                    <br>
-                    <li><a href="#">stores</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">contact</a></li>
-                    <br>
-                    <li><a href="#">Contact2WebsiteDevelopers</a></li>
-                </ul>
-            </div>
-            <div class="footer3">
-                <font>
-                    <input type="email" required placeholder="Type your Email...">
-                    <br>
-                    <button type="submit">Subscribe</button>
-                </font>
-                <ul class="icons">
-                    <li><i class="fa-brands fa-facebook fa-beat"></i></li>
-                    <li><i class="fa-brands fa-facebook-messenger fa-fade"></i></li>
-                    <li><i class="fa-solid fa-envelope fa-flip"></i></li>
-                    <li><i class="fa-brands fa-youtube fa-bounce"></i></li>
-                </ul>
-            </div>
-            <div class="footer4">
-               <h4>Copyright@ 2023-2024</h4>
-            </div>
-        </footer>
+      <footer>
+        <div class="footer1">
+          <h1>ShweDuWun</h1>
+          <br />
+          <h3>Medical Product Distributor</h3>
+        </div>
+        <div class="footer2">
+          <ul>
+            <li><a href="#">Pages</a></li>
+            <br />
+            <li><a href="#">stores</a></li>
+            <li><a href="#">services</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">contact</a></li>
+            <br />
+            <li><a href="#">Contact2WebsiteDevelopers</a></li>
+          </ul>
+        </div>
+        <div class="footer3">
+          <font>
+            <input type="email" required placeholder="Type your Email..." />
+            <br />
+            <button type="submit">Subscribe</button>
+          </font>
+          <ul class="icons">
+            <li><i class="fa-brands fa-facebook fa-beat"></i></li>
+            <li><i class="fa-brands fa-facebook-messenger fa-fade"></i></li>
+            <li><i class="fa-solid fa-envelope fa-flip"></i></li>
+            <li><i class="fa-brands fa-youtube fa-bounce"></i></li>
+          </ul>
+        </div>
+        <div class="footer4">
+          <h4>Copyright@ 2023-2024</h4>
+        </div>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
